--- a/index.html
+++ b/index.html
@@ -358,11 +358,11 @@
             });
 
             const buildUrl = "Build";
-            const loaderUrl = buildUrl + "/ZombyVk.loader.js";
+            const loaderUrl = buildUrl + "/Zomby.loader.js";
             const config = {
-                dataUrl: buildUrl + "/ZombyVk.data.unityweb",
-                frameworkUrl: buildUrl + "/ZombyVk.framework.js.unityweb",
-                codeUrl: buildUrl + "/ZombyVk.wasm.unityweb",
+                dataUrl: buildUrl + "/Zomby.data.unityweb",
+                frameworkUrl: buildUrl + "/Zomby.framework.js.unityweb",
+                codeUrl: buildUrl + "/Zomby.wasm.unityweb",
                 streamingAssetsUrl: "StreamingAssets",
                 companyName: "DefaultCompany",
                 productName: "Zombie defense 3d",
